History of this buildout
========================

6.1.2 (unreleased)
------------------

- Fixed exporting subscribers.  We needed method POST.
  Looks like this has not been working for a while.  [maurits]

- MINA-159: Made all fields required on event subscription form.  This
  was tricky, as there was some non intuitive code here that tripped
  me up.  I clarified the code and made more distinction between
  authenticated and anonymous users.  [maurits]


6.1.1 (2016-10-06)
------------------

- Use internal releases of plone.app.upgrade and plone.scale.
  This avoids a few problems during upgrade and when viewing scales.  [maurits]

- Added experimental.publishtraverse in warning mode.  [maurits]


6.1 (2016-09-23)
----------------

- Updated various versions.  Most possible impact: Reportlab from 2.6
  to 3.3.0, and collective.recaptcha from 1.11.5 to 2.0.0 using
  recaptcha api version 2.  [maurits]

- Updated RelStorage versions.  [maurits]

- Fixed generated zodbconvert.cfg to have a blob-dir in the source.
  Otherwise the conversion crashes on the first record that links to a
  blob file.  Use blobstoragenew as destination blob-dir.  Note that
  in the destination blob dir you may get less files: especially .lock
  files and their blob files are not taken over, because they are not
  needed.  On a fresh copy from the live site 200MB out of 3.2 GB of
  blobs are lost/cleaned this way.  It seems fine to use either the
  original or the new blobstorage.  The new one is cleaner.  [maurits]

- Add five.pt/Chameleon.  [maurits]

- Upgrade Plone from 4.3.6 to 4.3.11.  [maurits]


6.0.24 (2016-08-30)
-------------------

- Products.PloneHotfix20160830 1.0.  [maurits]


6.0.23 (2016-07-15)
-------------------

- MINA-155 Add button styling for tinymce with upgrade step.  [lhuiskes]


6.0.22 (2016-06-13)
-------------------

- Only load Google Analytics on www.minaraad.be.  [jladage]


6.0.21 (2016-06-12)
-------------------

- Add Google Analytics code.  [jladage]